      dependent packages are being built.  Patch from Luca Falavigna.
      (Closes: #551793)
    + [RA] Add emacs22 to obsolete emacs versions.  Thanks, Sven Joachim.
      (Closes: #560053)
  * checks/files{,.desc}:
    + [RA] New check for files present in both compressed and uncompressed
      form.  Patch from Raphael Geissert.  (Closes: #546174)
  * checks/init.d{,.desc}:
    + [RA] Add checks for missing dependencies on $local_fs or $remote_fs
      based on what files appear to be used in the init scripts.  Patch
      from Raphael Geissert.  (Partly addresses #405454)
  * checks/manpages.desc:
    + [RA] Clarify the long description of hyphen-used-as-minus-sign.
      Note that Debian groff is currently patched to avoid this problem,
      but hopefully that divergence can be removed.  Reference
      groff-base's README.Debian for more information.  (Closes: #548844)
  * checks/ocaml{,.desc}:
    + [RA] New checks for OCaml packaging.  Contributed by Stéphane
      Glondu.  (Closes: #528367)
  * checks/patch-systems{,.desc}:
    + [RA] Recommend DEP-3 in {dpatch,quilt}-patch-missing-description and
      reference the document.  Thanks, Raphaël Hertzog.  (Closes: #554025)
    + [RA] Allow DEP-3 headers in dpatch patches to satisfy the
      description requirement.  Thanks, Paul Gevers.  (Closes: #548640)
  * checks/rules{,.desc}:
    + [RA] Remove build-depends-without-arch-dep.  If the package only
      builds architecture-independent packages, the distinction between
      Build-Depends and Build-Depends-Indep is meaningless and there's no
      reason, even pedantically, to worry about the separation.  Thanks,
      Charles Plessy.  (Closes: #552200, #555667)
    + [RA] Add a new check for DEB_AUTO_UPDATE_DEBIAN_CONTROL = yes.
      Thanks, Nelson A. de Oliveira.  (Closes: #557120)

  * collection/ar-info{,.desc}:
    + [RA] Collects the results of ar t on all *.a files, used by the new
      OCaml checks.  Contributed by Stéphane Glondu.