@@ -3,17 +3,19 @@ Author: Jeroen van Wolffelaar <jeroen@wolffelaar.nl>
 Abbrev: hus
 Type: binary
 Unpack-Level: 2
-Info: This script checks whether an architecture-dependent package doesn't
- have a significantly big /usr/share
+Info: This script checks whether an architecture-dependent package has
+ large amounts of data in /usr/share.
 
 Tag: arch-dep-package-has-big-usr-share
 Severity: wishlist
 Certainty: certain
-Info: The package has a significant amount of architecture-independent data in
- /usr/share, while it is an architecture-dependent package.
- This is wasteful of mirror space and bandwidth, as we then end up with
+Info: The package has a significant amount of architecture-independent
+ data (over 4MB, or over 2MB and more than 50% of the package) in
+ <tt>/usr/share</tt> but is an architecture-dependent package.  This is
+ wasteful of mirror space and bandwidth since it means distributing
  multiple copies of this data, one for each architecture.
  .
- If the data in /usr/share is not architecture-independent, it is a policy
- violation, and in this case, you should move that data elsewhere.
+ If the data in <tt>/usr/share</tt> is not architecture-independent, this
+ is a Policy violation that should be fixed by moving the data elsewhere
+ (usually <tt>/usr/lib</tt>).
 Ref: devref 6.7.5
