@@ -1,0 +1,8 @@
+#!/usr/bin/make -f
+%:
+	dh $@
+
+override_dh_install:
+	install -d debian/huge-usr-share-percent/usr/share/a
+	dd if=/dev/zero of=debian/huge-usr-share-percent/usr/share/a/zero \
+	    bs=1024k count=2
