@@ -1,0 +1,6 @@
+Testname: huge-usr-share-percent
+Sequence: 6000
+Version: 1.0
+Description: Check passing the percentage limit of /usr/share data
+Architecture: any
+Test-For: arch-dep-package-has-big-usr-share
