@@ -1,0 +1,1 @@
+I: huge-usr-share-percent: arch-dep-package-has-big-usr-share 2076kB 99%
